# LLM-FastAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
src/app/: main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py  chat.py  help.py
src/app/core/: config.py  health.py  logger.py  schemas.py  setup.py
src/app/core/db/: database.py
src/app/core/llm/: schemas.py  utils.py
src/app/core/utils/: cache.py
src/app/models/: __init__.py  chat.py
src/app/schemas/: chat.py
src/app/services/: chat.py
src/tests/: test_stream.py
